crates/core/tests/snapshots/snapshots__snapshot_panda.snap
---
source: crates/core/tests/snapshots.rs
expression: value
---
{
  "components": {
    "Button": {
      "displayName": "Button",
      "filePath": "[ROOT]/fixtures/panda/button.tsx",
      "description": "A PandaCSS recipe-driven Button component.\nVariant props (`visual`, `size`) are extracted from HTML attributes at runtime.",
      "props": {
        "asChild": {
          "name": "asChild",
          "type": {
            "kind": "boolean"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonProps",
            "fileName": "[ROOT]/fixtures/panda/button.tsx"
          },
          "declarations": [
            {
              "name": "ButtonProps",
              "fileName": "[ROOT]/fixtures/panda/button.tsx"
            }
          ]
        },
        "size": {
          "name": "size",
          "type": {
            "kind": "union",
            "members": [
              {
                "kind": "literalUnion",
                "members": [
                  "sm",
                  "md",
                  "lg"
                ],
                "hasDefault": false
              },
              {
                "kind": "null"
              }
            ]
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": null,
          "declarations": []
        },
        "visual": {
          "name": "visual",
          "type": {
            "kind": "union",
            "members": [
              {
                "kind": "literalUnion",
                "members": [
                  "solid",
                  "outline",
                  "ghost"
                ],
                "hasDefault": false
              },
              {
                "kind": "null"
              }
            ]
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": null,
          "declarations": []
        }
      },
      "inheritance": [
        {
          "typeName": "React.ButtonHTMLAttributes",
          "fileName": "[ROOT]/node_modules/.pnpm/@types+react@[VERSION]/node_modules/@types/react/index.d.ts",
          "omitted": [],
          "htmlElement": "button",
          "totalProps": 0
        }
      ],
      "notableInherited": {
        "aria-describedby": {
          "name": "aria-describedby",
          "type": {
            "kind": "string"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "aria-expanded": {
          "name": "aria-expanded",
          "type": {
            "kind": "string"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "aria-haspopup": {
          "name": "aria-haspopup",
          "type": {
            "kind": "string"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "aria-label": {
          "name": "aria-label",
          "type": {
            "kind": "string"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "aria-pressed": {
          "name": "aria-pressed",
          "type": {
            "kind": "string"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "disabled": {
          "name": "disabled",
          "type": {
            "kind": "boolean"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "form": {
          "name": "form",
          "type": {
            "kind": "string"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "name": {
          "name": "name",
          "type": {
            "kind": "string"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "onBlur": {
          "name": "onBlur",
          "type": {
            "kind": "eventHandler",
            "eventType": "Event",
            "paramName": null
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "onClick": {
          "name": "onClick",
          "type": {
            "kind": "eventHandler",
            "eventType": "Event",
            "paramName": null
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "onFocus": {
          "name": "onFocus",
          "type": {
            "kind": "eventHandler",
            "eventType": "Event",
            "paramName": null
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "onKeyDown": {
          "name": "onKeyDown",
          "type": {
            "kind": "eventHandler",
            "eventType": "Event",
            "paramName": null
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "onKeyUp": {
          "name": "onKeyUp",
          "type": {
            "kind": "eventHandler",
            "eventType": "Event",
            "paramName": null
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "tabIndex": {
          "name": "tabIndex",
          "type": {
            "kind": "number"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "type": {
          "name": "type",
          "type": {
            "kind": "string"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        },
        "value": {
          "name": "value",
          "type": {
            "kind": "string"
          },
          "required": false,
          "defaultValue": null,
          "description": "",
          "tags": {},
          "parent": {
            "name": "ButtonHTMLAttributes",
            "fileName": "node_modules/@types/react/index.d.ts"
          },
          "declarations": []
        }
      },
      "discriminantProp": null,
      "composes": [],
      "tags": {},
      "methods": []
    }
  },
  "enums": {
    "buttonRecipe": [
      {
        "name": "visual",
        "value": "solid",
        "description": ""
      },
      {
        "name": "visual",
        "value": "outline",
        "description": ""
      },
      {
        "name": "visual",
        "value": "ghost",
        "description": ""
      },
      {
        "name": "size",
        "value": "sm",
        "description": ""
      },
      {
        "name": "size",
        "value": "md",
        "description": ""
      },
      {
        "name": "size",
        "value": "lg",
        "description": ""
      }
    ]
  },
  "diagnostics": [
    {
      "severity": "warning",
      "message": "Cannot resolve '../styled-system/types' from '[ROOT]/fixtures/panda/button.tsx'",
      "file": "[ROOT]/fixtures/panda/button.tsx",
      "line": null,
      "column": null,
      "help": "Resolution error: Cannot find module '../styled-system/types'",
      "code": "UNRESOLVABLE_IMPORT"
    },
    {
      "severity": "warning",
      "message": "Cannot resolve '../styled-system/types' from '[ROOT]/fixtures/panda/button.tsx'",
      "file": "[ROOT]/fixtures/panda/button.tsx",
      "line": null,
      "column": null,
      "help": "Resolution error: Cannot find module '../styled-system/types'",
      "code": "UNRESOLVABLE_IMPORT"
    }
  ],
  "stats": {
    "componentsExtracted": 1,
    "componentsSkipped": 0,
    "filesParsed": 1,
    "dtsFilesParsed": 0,
    "dtsCacheHits": 0,
    "durationMs": 0,
    "tier1Count": 0,
    "tier3Count": 0,
    "opaqueCount": 0
  }
}
